layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,7 @@ body {
 
 .sponsorlist {
   padding-top: 30px;
+  padding-bottom: 50px;
   text-align: center;
 
 }
